@@ -1,3 +1,0 @@
-MD5 622e5843167593c8ea39bf86c66b8fcf libxslt-1.1.19.tar.gz 2799906
-RMD160 ff8dbc7024c66b5f2886e8df2c7ac1bdedb07030 libxslt-1.1.19.tar.gz 2799906
-SHA256 9d57e9da2e8b90f24b8bd44f72607ca7f4f6f79ecb6599067de4098b528c8643 libxslt-1.1.19.tar.gz 2799906
