@@ -1,0 +1,3 @@
+MD5 4ea2dc22a23bf2aa570f868aa86357f8 libxslt-1.1.20.tar.gz 3689759
+RMD160 f2882ff47312de3b6317136ef751d4b42ab15a53 libxslt-1.1.20.tar.gz 3689759
+SHA256 ce92f00031c885e04cb65ea76c4675b07aa98af9607572fb0d68180c34bf5346 libxslt-1.1.20.tar.gz 3689759
