@@ -1,10 +1,10 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxslt/libxslt-1.1.19.ebuild,v 1.2 2006/12/21 07:59:45 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxslt/libxslt-1.1.20.ebuild,v 1.1 2007/01/18 03:05:30 leonardop Exp $
 
 EAPI="prefix"
 
-inherit libtool gnome.org eutils python
+inherit libtool eutils python
 
 DESCRIPTION="XSLT libraries and tools"
 HOMEPAGE="http://www.xmlsoft.org/"
@@ -18,20 +18,16 @@ DEPEND=">=dev-libs/libxml2-2.6.27
 	crypt? ( >=dev-libs/libgcrypt-1.1.92 )
 	python? ( dev-lang/python )"
 
-# Does not seem to be on the gnome.org mirror, as of 2006/12/20
-SRC_URI="ftp://xmlsoft.org/libxml2/${P}.tar.gz"
+SRC_URI="ftp://xmlsoft.org/${PN}/${P}.tar.gz"
 
 
 src_unpack() {
-	unpack ${A}
+	unpack "${A}"
 	cd "${S}"
 
 	# we still require the 1.1.8 patch for the .m4 file, to add
 	# the CXXFLAGS defines <obz@gentoo.org>
 	epatch "${FILESDIR}"/libxslt.m4-${PN}-1.1.8.patch
-
-	# Respect DESTDIR when creating libxslt-plugins directory
-	# epatch "${FILESDIR}"/${PN}-1.1.16-destdir.patch
 
 	# Patch Makefile to fix bug #99382 so that html gets installed in ${PF}
 	sed -i -e 's:libxslt-$(VERSION):${PF}:' doc/Makefile.in
@@ -44,9 +40,9 @@ src_compile() {
 	# Always pass --with-debugger. It is required by third parties (see
 	# e.g. bug #98345)
 	local myconf="--with-debugger \
-		$(use_with python)          \
-		$(use_with crypt crypto)    \
-		$(use_with debug)           \
+		$(use_with python)       \
+		$(use_with crypt crypto) \
+		$(use_with debug)        \
 		$(use_with debug mem-debug)"
 
 	econf ${myconf} || die "configure failed"
